--- a/PREDICTION_USING_SUPERVISED_ML.ipynb
+++ b/PREDICTION_USING_SUPERVISED_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4rOLyzFGMyY2RpmaVB1A6",
+      "authorship_tag": "ABX9TyOegWtIEid0Pvp/W5wAyC3z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,8 @@
         "# AIM\n",
         "\n",
         "To predict the percentage of a student based on the number of study hours.\n",
-        "to predict the score of a student if a student studies for 9.25 hrs/day."
+        "\n",
+        "To predict the score of a student if a student studies for 9.25 hrs/day."
       ],
       "metadata": {
         "id": "7kXDDnmLFFzg"
